--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,9 +21,9 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: none
-    properties:
-      hibernate:
-        '[default_schema]': ${PG_SCHEMA:customer-service}
+#    properties:
+#      hibernate:
+#        '[default_schema]': ${PG_SCHEMA:customer-service}
 spring-doc:
   api-docs:
     enabled: true
